--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no desenvolvimento de Software</li>
+        <li>Kubernetes: Introdução a orquestração de conteiners</li>
     </ul>
 </body>
 
